--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contacts</title>
-  <link rel="stylesheet" href="contacts.css">
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <link rel="stylesheet" href="contacts.css" />
 </head>
 <body>
-  <div class="page-container">
-    <!-- Titolo -->
-    <h1 class="page-title">contacts</h1>
+  <div class="project-container">
+    <h1 class="project-title">CONTACTS</h1>
 
-    <!-- Form -->
-    <form id="contact-form">
-      <input type="text" name="from_name" placeholder="Your name" required>
-      <input type="email" name="reply_to" placeholder="Your email" required>
-      <textarea name="message" placeholder="Your message" required></textarea>
+    <!-- Modulo contatti -->
+    <form id="contact-form" class="contact-form">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="from_name" required />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="reply_to" required />
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="6" required></textarea>
+
       <button type="submit">Send</button>
     </form>
 
-    <!-- Fascia info in basso -->
-    <div class="bottom-bar">
-      <span id="reality-number"></span> —
-      <span id="date-time"></span> —
-      <span id="cursor-pos"></span> —
-      <a href="index.html" class="back-link">back to home</a>
+    <!-- Numero di telefono -->
+    <div class="contact-info">
+      <strong>Phone</strong><br>
+      +39 327 202 4340
     </div>
+
+    <a href="#" id="back-link">← Back to works</a>
   </div>
 
-  <!-- Overlay GOTCHA -->
-  <div id="gotcha-overlay">
-    <div class="gotcha-text">GOTCHA</div>
+  <!-- Fascia footer -->
+  <div id="layout-footer">
+    <span class="date-time"></span>
+    <span id="layout-text">Reality</span>
+    <span id="cursor-position"></span>
   </div>
 
+  <!-- Cursore personalizzato -->
+  <div id="custom-cursor">+</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script src="contacts.js"></script>
 </body>
 </html>
