--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -24,7 +24,7 @@
       <button type="submit">Send</button>
     </form>
 
-    <a href="#" id="back-link">← Back to works</a>
+    <a href="#" id="back-link">← Back to home</a>
   </div>
 
   <!-- Fascia footer -->
