--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -6,6 +6,12 @@
   <title>Contacts</title>
   <link rel="stylesheet" href="contacts.css" />
 </head>
+  
+  <!-- Overlay GOTCHA -->
+<div id="gotcha-overlay">
+  <div class="gotcha-text">GOTCHA!</div>
+  <a href="../../index.html" class="gotcha-close">×</a>
+</div>
 <body>
   <div class="project-container">
     <h1 class="project-title">CONTACTS</h1>
