--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -46,4 +46,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script src="contacts.js"></script>
 </body>
+  <div id="gotcha-overlay">
+  GOTCHA!
+  <span id="gotcha-close">×</span>
+</div>
+
 </html>
