--- a/info/info.html
+++ b/info/info.html
@@ -10,13 +10,9 @@
   <div class="project-container">
     <h1 class="project-title">INFO</h1>
     
-    <!-- Foto profilo -->
-    <img src="/img/profile.jpg" alt="profile photo" class="project-image" />
-    
     <!-- Testo biografico -->
     <p class="project-description">
-      <strong>who</strong>
-      Federico Martorana
+      <strong>Federico Martorana</strong>
 
       <strong>about</strong>
       Studente di Architettura, appassionato di spazi e narrazioni.  
