--- a/who/who.html
+++ b/who/who.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Info</title>
-  <link rel="stylesheet" href="info.css" />
+  <title>who</title>
+  <link rel="stylesheet" href="who.css" />
 </head>
 <body>
   <div class="project-container">
-    <h1 class="project-title">INFO</h1>
+    <h1 class="project-title">WHO</h1>
     
     <!-- Testo biografico -->
     <p class="project-description">
@@ -35,6 +35,6 @@
   <!-- Cursore personalizzato -->
   <div id="custom-cursor">+</div>
 
-  <script src="info.js"></script>
+  <script src="who.js"></script>
 </body>
 </html>
