--- a/extrashome/extrashome.html
+++ b/extrashome/extrashome.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Works</title>
+  <title>Extras</title>
   <link rel="stylesheet" href="extrashome.css" />
 </head>
 <body>
