--- a/extras/dalco&chipperfield/dalco&chipperfield.html
+++ b/extras/dalco&chipperfield/dalco&chipperfield.html
@@ -26,7 +26,7 @@ I therefore conclude, as a student, with the hope that this conference will be t
     </p>
     
 
-    <a href="#" id="back-link">← Back to works</a>
+    <a href="#" id="back-link">← Back to extra</a>
   </div>
 
   <!-- Fascia footer -->
