--- a/extras/wegotlostbetweenawallandanidea/wegotlostbetweenawallandanidea.html
+++ b/extras/wegotlostbetweenawallandanidea/wegotlostbetweenawallandanidea.html
@@ -21,7 +21,7 @@ We lost ourselves between a wall and an idea, in a liminal space where matter an
     <a href="thesis.pdf" target="_blank" class="cv-button">Download Thesis</a>
     
 
-    <a href="#" id="back-link">← Back to extra</a>
+    <a href="#" id="back-link">← Back to extras</a>
   </div>
 
   <!-- Fascia footer -->
