--- a/who/who.html
+++ b/who/who.html
@@ -20,7 +20,7 @@ I am a graduating student in Architecture at Politecnico di Milano, where I have
     </p>
 
     <!-- Bottone CV -->
-    <a href="cv.pdf" target="_blank" class="cv-button">Open CV</a>
+    <a href="CV.pdf" target="_blank" class="cv-button">Open CV</a>
 
     <a href="#" id="back-link">← Back to home</a>
   </div>
