--- a/extra/extra.html
+++ b/extra/extra.html
@@ -11,7 +11,10 @@
   <div class="works-container" id="works-container">
     <!-- I quadrati verranno generati via JS -->
   </div>
-
+  
+      <a href="#" id="back-link">← Back to home</a>
+  </div>
+  
   <!-- Fascia colorata in basso -->
   <div id="layout-footer">
     <span class="date-time"></span>
