--- a/extra/extra.html
+++ b/extra/extra.html
@@ -12,8 +12,8 @@
     <!-- I quadrati verranno generati via JS -->
   </div>
   
-<a href="#" id="back-link">← Back to home</a>
-  
+        <a href="#" id="back-link">← Back to home</a>
+  </div>
   <!-- Fascia colorata in basso -->
   <div id="layout-footer">
     <span class="date-time"></span>
