--- a/projects/hypogeum/hypogeum.html
+++ b/projects/hypogeum/hypogeum.html
@@ -41,56 +41,56 @@ The culmination is reached at the center, the cusp of the inverted dome, the onl
     <div class="additional-images">
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum01.jpg" alt="Descrizione immagine 1" />
+          <img src="/img/hypogeum/hypogeum01.jpg" alt="Logo" />
         </div>
         <figcaption>Descrizione immagine 1</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum02.jpg" alt="Descrizione immagine 2" />
+          <img src="/img/hypogeum/hypogeum02.jpg" alt="Masterplan" />
         </div>
         <figcaption>Descrizione immagine 2</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum03.jpg" alt="Descrizione immagine 3" />
+          <img src="/img/hypogeum/hypogeum03.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 3</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum04.jpg" alt="Descrizione immagine 4" />
+          <img src="/img/hypogeum/hypogeum04.jpg" alt="Oculus room view" />
         </div>
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum05.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/hypogeum/hypogeum05.jpg" alt="Oculus view" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum06.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/hypogeum/hypogeum06.jpg" alt="Floor plans" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum07.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/hypogeum/hypogeum07.jpg" alt="Section" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/hypogeum/hypogeum08.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/hypogeum/hypogeum08.jpg" alt="Oculus room plan" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
