--- a/projects/houseatelier/houseatelier.html
+++ b/projects/houseatelier/houseatelier.html
@@ -25,35 +25,35 @@ The formal and technological sincerity of the residential body (the base) is in 
     <div class="additional-images">
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/houseatelier/houseatelier01.jpg" alt="Descrizione immagine 1" />
+          <img src="/img/houseatelier/houseatelier01.jpg" alt="Logo" />
         </div>
         <figcaption>Descrizione immagine 1</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/houseatelier/houseatelier02.jpg" alt="Descrizione immagine 2" />
+          <img src="/img/houseatelier/houseatelier02.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 2</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/houseatelier/houseatelier03.jpg" alt="Descrizione immagine 3" />
+          <img src="/img/houseatelier/houseatelier03.jpg" alt="Floor plan" />
         </div>
         <figcaption>Descrizione immagine 3</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/houseatelier/houseatelier04.jpg" alt="Descrizione immagine 4" />
+          <img src="/img/houseatelier/houseatelier04.jpg" alt="Detail" />
         </div>
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/houseatelier/houseatelier05.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/houseatelier/houseatelier05.jpg" alt="Detail" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
