--- a/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
+++ b/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
@@ -32,63 +32,63 @@ The linear residential building, aligned with the museum, has a reinforced concr
     <div class="additional-images">
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit01.jpg" alt="Descrizione immagine 1" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit01.jpg" alt="Logo" />
         </div>
         <figcaption>Descrizione immagine 1</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit02.jpg" alt="Descrizione immagine 2" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit02.jpg" alt="Masterplan" />
         </div>
         <figcaption>Descrizione immagine 2</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit03.jpg" alt="Descrizione immagine 3" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit03.jpg" alt="City level plan" />
         </div>
         <figcaption>Descrizione immagine 3</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit04.jpg" alt="Descrizione immagine 4" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit04.jpg" alt="Ground floor plan" />
         </div>
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit05.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit05.jpg" alt="Section" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit06.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit06.jpg" alt="Facade" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit07.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit07.jpg" alt="Details" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit08.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit08.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit09.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit09.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
