--- a/projects/houseatelier/houseatelier.html
+++ b/projects/houseatelier/houseatelier.html
@@ -39,7 +39,7 @@ The formal and technological sincerity of the residential body (the base) is in 
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/houseatelier/houseatelier03.jpg" alt="Floor plan" />
+          <img src="/img/houseatelier/houseatelier03.jpg" alt="Ground floor plan" />
         </div>
         <figcaption>Descrizione immagine 3</figcaption>
       </figure>
