--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -30,175 +30,168 @@ And everything is architecture.
     <div class="additional-images">
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra01.jpg" alt="Descrizione immagine 1" />
+          <img src="/img/tetra/tetra01.jpg" alt="Logo" />
         </div>
         <figcaption>Descrizione immagine 1</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra02.jpg" alt="Descrizione immagine 2" />
+          <img src="/img/tetra/tetra02.jpg" alt="Concept sketches" />
         </div>
         <figcaption>Descrizione immagine 2</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra03.jpg" alt="Descrizione immagine 3" />
+          <img src="/img/tetra/tetra03.jpg" alt="Masterplan" />
         </div>
         <figcaption>Descrizione immagine 3</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra04.jpg" alt="Descrizione immagine 4" />
+          <img src="/img/tetra/tetra04.jpg" alt="Axonometric view />
         </div>
         <figcaption>Descrizione immagine 4</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra05.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra05.jpg" alt="Axonometric exploded view" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra06.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra06.jpg" alt="Ground floors plan" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra07.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra07.jpg" alt="City-level floor plan" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra08.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra08.jpg" alt="Elevations" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra09.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra09.jpg" alt="Synoptic table of the towers" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra10.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra10.jpg" alt="Tower models" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra11.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra11.jpg" alt="Section" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra12.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra12.jpg" alt="Section" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra13.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra13.jpg" alt="Section" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra14.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra14.jpg" alt="Detail" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra15.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra15.jpg" alt="Detail" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra16.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra17.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra17.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra18.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra18.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra19.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra19.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra21.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra21.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra22.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra22.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra23.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra23.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra24.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra24.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra25.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra25.jpg" alt="Descrizione immagine 5" />
-        </div>
-        <figcaption>Descrizione immagine 5</figcaption>
-      </figure>
-
-      <figure class="additional-image">
-        <div class="image-frame">
-          <img src="/img/tetra/tetra26.jpg" alt="Descrizione immagine 5" />
+          <img src="/img/tetra/tetra26.jpg" alt="View" />
         </div>
         <figcaption>Descrizione immagine 5</figcaption>
       </figure>
