--- a/projects/hypogeum/hypogeum.html
+++ b/projects/hypogeum/hypogeum.html
@@ -43,56 +43,56 @@ The culmination is reached at the center, the cusp of the inverted dome, the onl
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum01.jpg" alt="Logo" />
         </div>
-        <figcaption>Descrizione immagine 1</figcaption>
+        <figcaption>Logo</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum02.jpg" alt="Masterplan" />
         </div>
-        <figcaption>Descrizione immagine 2</figcaption>
+        <figcaption>Masterplan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum03.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 3</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum04.jpg" alt="Oculus room view" />
         </div>
-        <figcaption>Descrizione immagine 4</figcaption>
+        <figcaption>Oculus room view</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum05.jpg" alt="Oculus view" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Oculus view</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum06.jpg" alt="Floor plans" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Floor plans</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum07.jpg" alt="Section" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Section</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/hypogeum/hypogeum08.jpg" alt="Oculus room plan" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Oculus room plan</figcaption>
       </figure>
 
 
