--- a/projects/miesianhouse/miesianhouse.html
+++ b/projects/miesianhouse/miesianhouse.html
@@ -33,28 +33,28 @@ The plan follows orthogonal lines between them, is clear, simple and rational.
         <div class="image-frame">
           <img src="/img/miesianhouse/miesianhouse01.jpg" alt="Logo" />
         </div>
-        <figcaption>Descrizione immagine 1</figcaption>
+        <figcaption>Logo</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/miesianhouse/miesianhouse02.jpg" alt="Plan" />
         </div>
-        <figcaption>Descrizione immagine 2</figcaption>
+        <figcaption>Plan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/miesianhouse/miesianhouse03.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 3</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/miesianhouse/miesianhouse04.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 4</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
 
