--- a/projects/houseatelier/houseatelier.html
+++ b/projects/houseatelier/houseatelier.html
@@ -27,35 +27,35 @@ The formal and technological sincerity of the residential body (the base) is in 
         <div class="image-frame">
           <img src="/img/houseatelier/houseatelier01.jpg" alt="Logo" />
         </div>
-        <figcaption>Descrizione immagine 1</figcaption>
+        <figcaption>Logo</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/houseatelier/houseatelier02.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 2</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/houseatelier/houseatelier03.jpg" alt="Ground floor plan" />
         </div>
-        <figcaption>Descrizione immagine 3</figcaption>
+        <figcaption>Ground floor plan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/houseatelier/houseatelier04.jpg" alt="Detail" />
         </div>
-        <figcaption>Descrizione immagine 4</figcaption>
+        <figcaption>Detail</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/houseatelier/houseatelier05.jpg" alt="Detail" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Detail</figcaption>
       </figure>
       <!-- ... continua fino a houseatelier26 con lo stesso schema -->
     </div>
