--- a/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
+++ b/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
@@ -34,63 +34,63 @@ The linear residential building, aligned with the museum, has a reinforced concr
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit01.jpg" alt="Logo" />
         </div>
-        <figcaption>Descrizione immagine 1</figcaption>
+        <figcaption>Logo</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit02.jpg" alt="Masterplan" />
         </div>
-        <figcaption>Descrizione immagine 2</figcaption>
+        <figcaption>Masterplan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit03.jpg" alt="City level plan" />
+          <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit03.jpg" alt="City-level floor plan" />
         </div>
-        <figcaption>Descrizione immagine 3</figcaption>
+        <figcaption>City-level floor plan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit04.jpg" alt="Ground floor plan" />
         </div>
-        <figcaption>Descrizione immagine 4</figcaption>
+        <figcaption>Ground floor plan"</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit05.jpg" alt="Section" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Section</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit06.jpg" alt="Facade" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Facade</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit07.jpg" alt="Details" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Details</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit08.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/archiveexhibitinhabit/archiveexhibitinhabit09.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <!-- ... continua fino a archiveexhibitinhabit26 con lo stesso schema -->
