--- a/projects/tetra/tetra.html
+++ b/projects/tetra/tetra.html
@@ -32,168 +32,168 @@ And everything is architecture.
         <div class="image-frame">
           <img src="/img/tetra/tetra01.jpg" alt="Logo" />
         </div>
-        <figcaption>Descrizione immagine 1</figcaption>
+        <figcaption>Logo</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra02.jpg" alt="Concept sketches" />
         </div>
-        <figcaption>Descrizione immagine 2</figcaption>
+        <figcaption>Concept sketches</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra03.jpg" alt="Masterplan" />
         </div>
-        <figcaption>Descrizione immagine 3</figcaption>
+        <figcaption>Masterplan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
-          <img src="/img/tetra/tetra04.jpg" alt="Axonometric view />
+          <img src="/img/tetra/tetra04.jpg" alt="Axonometric view" />
         </div>
-        <figcaption>Descrizione immagine 4</figcaption>
+        <figcaption>Axonometric view</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra05.jpg" alt="Axonometric exploded view" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Axonometric exploded view</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra06.jpg" alt="Ground floors plan" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Ground floors plan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra07.jpg" alt="City-level floor plan" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>City-level floor plan</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra08.jpg" alt="Elevations" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Elevations</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra09.jpg" alt="Synoptic table of the towers" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Synoptic table of the towers</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra10.jpg" alt="Tower models" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Tower models</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra11.jpg" alt="Section" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Section</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra12.jpg" alt="Section" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Section</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra13.jpg" alt="Section" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Section</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra14.jpg" alt="Detail" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Detail</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra15.jpg" alt="Detail" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>Detail</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra17.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra18.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra19.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra21.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra22.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra23.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra24.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra25.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
       <figure class="additional-image">
         <div class="image-frame">
           <img src="/img/tetra/tetra26.jpg" alt="View" />
         </div>
-        <figcaption>Descrizione immagine 5</figcaption>
+        <figcaption>View</figcaption>
       </figure>
 
 
