--- a/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
+++ b/projects/archiveexhibitinhabit/archiveexhibitinhabit.html
@@ -116,5 +116,26 @@ The linear residential building, aligned with the museum, has a reinforced concr
   </div>
 
   <script src="archiveexhibitinhabit.js"></script>
+  <script>
+// Disabilita tasto destro
+document.addEventListener("contextmenu", (e) => e.preventDefault());
+
+// Disabilita alcune scorciatoie da tastiera
+document.addEventListener("keydown", (e) => {
+  // F12
+  if (e.key === "F12") {
+    e.preventDefault();
+  }
+  // Ctrl+Shift+I / Ctrl+Shift+J / Ctrl+Shift+C
+  if (e.ctrlKey && e.shiftKey && ["I", "J", "C"].includes(e.key.toUpperCase())) {
+    e.preventDefault();
+  }
+  // Ctrl+U (visualizza sorgente)
+  if (e.ctrlKey && e.key.toUpperCase() === "U") {
+    e.preventDefault();
+  }
+});
+</script>
+
 </body>
 </html>
