--- a/projects/livingsculpture/livingsculpture.html
+++ b/projects/livingsculpture/livingsculpture.html
@@ -231,5 +231,26 @@ These rules can be summarized in a few simple and well-defined points:
   </div>
 
   <script src="livingsculpture.js"></script>
+  <script>
+// Disabilita tasto destro
+document.addEventListener("contextmenu", (e) => e.preventDefault());
+
+// Disabilita alcune scorciatoie da tastiera
+document.addEventListener("keydown", (e) => {
+  // F12
+  if (e.key === "F12") {
+    e.preventDefault();
+  }
+  // Ctrl+Shift+I / Ctrl+Shift+J / Ctrl+Shift+C
+  if (e.ctrlKey && e.shiftKey && ["I", "J", "C"].includes(e.key.toUpperCase())) {
+    e.preventDefault();
+  }
+  // Ctrl+U (visualizza sorgente)
+  if (e.ctrlKey && e.key.toUpperCase() === "U") {
+    e.preventDefault();
+  }
+});
+</script>
+
 </body>
 </html>
