--- a/extras/dalco&chipperfield/dalco&chipperfield.html
+++ b/extras/dalco&chipperfield/dalco&chipperfield.html
@@ -46,5 +46,26 @@ I therefore conclude, as a student, with the hope that this conference will be t
   </div>
 
   <script src="dalcochipperfield.js"></script>
+  <script>
+// Disabilita tasto destro
+document.addEventListener("contextmenu", (e) => e.preventDefault());
+
+// Disabilita alcune scorciatoie da tastiera
+document.addEventListener("keydown", (e) => {
+  // F12
+  if (e.key === "F12") {
+    e.preventDefault();
+  }
+  // Ctrl+Shift+I / Ctrl+Shift+J / Ctrl+Shift+C
+  if (e.ctrlKey && e.shiftKey && ["I", "J", "C"].includes(e.key.toUpperCase())) {
+    e.preventDefault();
+  }
+  // Ctrl+U (visualizza sorgente)
+  if (e.ctrlKey && e.key.toUpperCase() === "U") {
+    e.preventDefault();
+  }
+});
+</script>
+
 </body>
 </html>
